# APICode

./: .gitignore  API.py  API_Runner.py  Procfile  README.md  ascii_api.py  compiler_api.py  duration_of_a_playlist.py  duration_of_a_playlist_api.py  lyrics_api.py  main.py  meme_api.py  popular_video_in_a_playlist.py  pyproject.toml  reddit_api.py  requirements.txt  temperature_api.py  test_api.py
API/: README.md  ai_api.py  ascii_api.py  calculator_api.py  compiler_api.py  duration_of_a_playlist_api.py  hexdecimal_denary..py  inspire_api.py  lyrics_api.py  reddit_api.py  temperature_api.py
API/AI_Train_Data/template/: template.aiml
Python Module/: README.md  app.py
Python_Module/: app.py
Tests/: README.md  test_api.py  test_app.py
youtube_things/: duration_of_a_playlist.py  duration_of_a_playlist_my_try.py
